@@ -1,10 +1,11 @@
 1.6.8
 	* Fix ldns zone, so that $TTL definition match RFC 2308.
-    * Drill: Print both SHA-1 and SHA-256 corresponding DS records.
 	* Fix lots of missing checks on allocation failures and parse of 
 	  NSEC with many types and max parse length in hosts_frm_fp routine
 	  and off by one in read_anchor_file routine (thanks Dan Kaminsky and
 	  Justin Ferguson).
+	* Drill: Print both SHA-1 and SHA-256 corresponding DS records.
+	* Print correct WHEN in query packet (is not always 1-1-1970)
 
 1.6.7	2010-11-08
 	* EXPERIMENTAL ecdsa implementation, please do not enable on real
